tests/expectations/compiler/examples/basic_bank.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:27
     |
  41 |         let hash: field = BHP256::hash_to_field(token.owner);
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:62:27
     |
  62 |         let hash: field = BHP256::hash_to_field(recipient);
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
